--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,16 @@
 version: '3.1'
 services:
-  app:
-    container_name: app
+  application:
+    container_name: application
     image: app
     build: ./
     ports:
-      - "9090:9000"
+      - "9000:9000"
     depends_on:
       - db
   db:
-    image: postgres
+    container_name: test-project-db
+    image: postgres:12.0
     ports:
       - "5433:5432"
     environment:
