--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ server:
     context-path: /api/v1
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/test-project
+    url: jdbc:postgresql://db:5432/test-project
     username: postgres
     password: postgres
   liquibase:
