--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: app
     build: ./
     ports:
-      - "9000:9000"
+      - "9090:9000"
     depends_on:
       - db
   db:
@@ -17,3 +17,4 @@ services:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_DB=test-project
+      - DB_HOST=db
