--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     build: ./
     ports:
       - "9090:9000"
+    environment:
+      - DB_HOST=db
     depends_on:
       - db
   db:
@@ -17,4 +19,3 @@ services:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_DB=test-project
-      - DB_HOST=db
